Bug 1119398 - [RTL][Browser] Settings icon is left-aligned on the error message

--- a/apps/system/style/net_error.css
+++ b/apps/system/style/net_error.css
@@ -65,6 +65,13 @@ form[role="dialog"][data-type="action"] > menu > button.icon {
   background-position: 0.5rem center;
 }
 
+html[dir="rtl"] form[role="dialog"][data-type="action"] > menu > button.icon {
+  padding-left: 1.2rem;
+  padding-right: 4rem;
+  background-position: calc(100% - 0.5rem) center;
+  text-align: left;
+}
+
 form[role="dialog"][data-type="action"] > menu > button.icon-settings {
   background-image: url(net_error/settings.png);
 }
